# CoreRunner

./: .gitmodules  build.sh  requirement.sh  run_build.sh  setupenv.sh
firmware/grid_scheduler/: Makefile  gridwalker.c  hwconfig.h  linker.ld
firmware/mytest/: Makefile  baremetal.c  helloworld.c  linker.ld  linker.ld.S  main.c  output.map  qconfig.h  sec2eventflag.c  sec2queues.c  verifyloop.c  verifyopen.c  verifyqueue.c
gem5_ext/: run_gem5gpu.sh  run_gem5opu.sh  setup_env.sh
gem5_ext/configs/corerunner/: riscv_baremetal.py  riscv_fs.py  riscv_simple.py  simple_riscv.py
gem5_ext/configs/corerunner/learning1/: riscv_simple.py
gem5_ext/configs/corerunner/learning2/: caches.py  run_hello.py
gem5_ext/gpgpu/build_opts/: CoreRunner_GPU  HostSE_GPU  X86_VI_hammer_GPU
gem5_ext/gpgpu/gpgpu-sim/src/: SConsopts
gem5_ext/gpgpu/src/api/: SConscript  gpu_syscall_helper.cc  gpu_syscall_helper.hh  libcuda_syscalls.cc
gem5_ext/gpgpu/src/gpu/: SConscript  ShaderMMU.py  command_processor.cc  command_processor.hh  shader_mmu.cc  shader_mmu.hh
gem5_ext/src/corerunner/cachecoherence/: Kconfig  MSI-cache.sm  (+3 more)
gem5_ext/src/libcuda/: Makefile  abstract_hardware_model.h
gem5_ext/src/scnode_within_gem5/: SConscript  SystemCTLM.py  config_simple.py  ring.py  sc_tlm_target.cc  sc_tlm_target.hh  sc_tlm_wrapper.cc  sc_tlm_wrapper.hh
gem5_ext/src/scnode_within_gem5/ScNode/: AddressDecoder.cpp  AddressDecoder.h  Arbiter.cpp  Arbiter.h  CMakeLists.txt  DebugManager.cpp  DebugManager.h  Passthrough.h  ScMemory.h  ScNode.h  ScNodeTarget.cpp  ScNodeTarget.h  ScNodeWrapper.cpp  ScNodeWrapper.h
(+367 files in other folders)
